# cruise_projects

./: README.md
cpp/crFramework/: CMakeLists.txt
cpp/crFramework/crData/: CMakeLists.txt
cpp/crFramework/crData/include/: crStringToken.h  crThread.h  crThreadPool.h
cpp/crFramework/crData/src/: crStringToken.cpp  crThread.cpp
cpp/crFramework/crData/test_crData/: CMakeLists.txt  test.cpp
golang/cruise/cruise/src/cruise.com/crData/: readme.txt
golang/cruise/cruise/src/cruise.com/crDef/: def.go  readme.txt
golang/cruise/cruise/src/cruise.com/crLog/: log.go
golang/cruise/cruise/src/cruise.com/crNet/: readme.txt  serverlistener.go  socketmanager.go  tcpsession.go  tcpsocket.go
golang/cruise/cruise/src/cruise.com/crProto/: crNet.pb.go  crNet.proto  proto.sh  protoc
golang/cruise/cruise/src/github.com/golang/protobuf/protoc-gen-go/: protoc-gen-go
golang/cruise/cruise/src/myserver/client/: client  main.go
golang/cruise/cruise/src/myserver/server/: main.go  server
